<resources>
    <string name="app_name">Quiet Hours</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_profile">No Profile has been added yet</string>
    <string name="profile_name">Profile Name</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="deleteAll">Delete all Profiles</string>

    <string name="Time">%1$s:%2$s</string>
    <string name="pref_rate_title">Rate Quiet Hours</string>
    <string name="pref_rate_summary">Rate the Quiet Hours App on Play Store</string>
    <string name="pref_share_title">Share Quiet Hours</string>
    <string name="pref_share_summary">Share the Quiet Hours app with your friends</string>
    <string name="promo_msg_template">Hey, try this. - %s . You will love it.</string>
    <string name="app_share_url" translatable="false">https://play.google.com/store/apps/details?id=%s</string>
    <string name="error_msg_retry">Please Try Again</string>
    <string name="welcome_to_quiet_hours">Welcome to Quiet Hours</string>
    <string name="app_tagline">No more trouble to make silent mode \n ON/OFF manually every time.</string>
    <string name="intro_screen2_descp">Pause/Resume a profile by clicking on toggle button and swipe left a profile to delete it</string>
    <string name="click_on_profile_to_get_it_s_details">Click on profile to get it\'s details</string>
</resources>
