<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
            android:key="nightMode"
            android:summaryOff="Disabled"
            android:summaryOn="Enabled"
            android:title="Dark Mode" />

    <CheckBoxPreference
            android:key="time format"
            android:title="Use 24 Hour Time Format"
            android:summaryOff="12 Hour Time Format on"
            android:summaryOn="24 Hour Time Format on"/>

    <PreferenceScreen
            android:title="@string/pref_rate_title"
            android:key="rate"
            android:summary="@string/pref_rate_summary" />

    <PreferenceScreen
            android:title="@string/pref_share_title"
            android:key="share"
            android:summary="@string/pref_share_summary" />


</PreferenceScreen>