<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".Fragments.NewProfileFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:background="@color/bgColor">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/bgColor"
                app:navigationIcon="@drawable/arrow" />

        <LinearLayout
                android:id="@+id/ParentLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <LinearLayout
                    android:id="@+id/editTextParentLinearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="100dp"
                    android:gravity="center"
                    android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/toDoCustomTextInput"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="32dp"
                        android:layout_marginRight="32dp"
                        android:hint="@string/profile_name">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userToDoEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textAutoCorrect|textCapSentences"
                            android:lines="2"
                            android:maxLines="3"
                            android:textColor="@color/textColor"
                            android:textColorHint="@color/textColor" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="100dp"
                        android:visibility="visible"
                        android:weightSum="1">

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".1" />

                    <EditText
                            android:id="@+id/StartTime"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".35"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/start_time"
                            android:padding="10dp"
                            android:textAlignment="center"
                            android:textIsSelectable="false" />

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".1" />

                    <EditText
                            android:id="@+id/EndTime"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".35"
                            android:focusable="false"
                            android:focusableInTouchMode="false"
                            android:hint="@string/end_time"
                            android:padding="10dp"
                            android:textAlignment="center"
                            android:textIsSelectable="false" />

                    <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight=".1" />

                </LinearLayout>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="50dp"
                        android:layout_marginEnd="35dp"
                        android:visibility="visible">

                    <ca.antonious.materialdaypicker.MaterialDayPicker
                            android:id="@+id/day_picker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/makeProfileFab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="50dp"
                android:background="@drawable/button"
                android:baselineAlignBottom="false"
                android:text="Submit"
                android:textColor="#ffffff"
                app:fabSize="normal" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>